fixed item wrapping issues + add task now reset form after submit

--- a/static/index.css
+++ b/static/index.css
@@ -256,6 +256,9 @@
   .flex-row {
     flex-direction: row;
   }
+  .flex-wrap {
+    flex-wrap: wrap;
+  }
   .justify-end {
     justify-content: flex-end;
   }
